adjusts layout grid height and overflow to prevent unintended overflows

--- a/app/src/css/layout.css
+++ b/app/src/css/layout.css
@@ -6,6 +6,7 @@
   flex-direction: column;
   flex-wrap: nowrap;
   width: 100%;
+  overflow: hidden;
 
   .bread-crumb{
     margin: 8px;
@@ -18,7 +19,7 @@
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: repeat(12, 1fr);
-    max-height: 100vh;
+    max-height: 95vh;
 
     header, .main-header {
       margin: 16px;
@@ -40,6 +41,9 @@
       grid-row: 3/11;
       border: 2px solid black;
       /* background-color: magenta; */
+      overflow: hidden;
+      padding: 8px;
+      box-sizing: content-box;
     }
 
     .mission-clock{
